# honeypot-attack-dashboard

./: .gitignore  README.md  pyproject.toml
api/: __init__.py  main.py
deploy/: Dockerfile  VPS-DEPLOYMENT.md  docker-compose.yml
deploy/scripts/: fetch_geoip.sh
honeypot/: __init__.py  cli.py  config.py  db.py  events.py  export.py  fake_shell.py  geoip.py  http_pages.py  http_server.py  seed.py  ssh_server.py
scripts/: generate_seed.py
tests/: __init__.py  conftest.py  test_api.py  test_db.py  test_fake_shell.py  test_geoip.py  test_http_server.py  test_no_exec.py  test_seed.py  test_ssh_server.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: dashboard.spec.ts
web/public/: demo-data.json
web/scripts/: screenshot.mjs
web/src/: api.test.ts  api.ts  charts.ts  dom.ts  flags.ts  main.ts  map.ts  types.ts
web/src/styles/: app.css
